# ai-cheating-app

./: Cargo.toml  README.md
src/: api.rs  main.rs  utils.rs
