[package]
name = "ai-cheating-app"
version = "0.1.0"
edition = "2021"
authors = ["endprivate <maternalrecurrence@proton.me>"]
description = "App to do calculations"  # Description of the package/application

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
openai-api-rs = "4.0.8"
rand = "0.8.5"

[package.metadata]
name = "Calculator"  # Name of the application
identifier = "com.example.myapp"  # Bundle identifier for macOS
icon = "/Users/oblivisheee/Documents/GitHub/ai-cheating-app/icon.ico"  # Path to the application icon

[package.metadata.bundle]